# CppUnitTesting

./: .gitignore
src/: CMakeLists.txt  run_all_tests.cpp
src/libs/: CMakeLists.txt  database_manager.h  db_mng_factory.cpp  db_mng_factory.h  entry_analyzer.h  interface_database_manager.h  interface_web_service.h  testdefs.h  web_service.h
src/prod_libs/: CMakeLists.txt  database_manager.h
src/test_libs/: CMakeLists.txt  database_manager.h
src/tests/: CMakeLists.txt  entry_analyzer_test.cpp  fake_database_manager.h  fake_web_service.h  stub_db_mng_negative.h  testing_entry_analyzer.h  web_service_test.cpp
